final Check -site running

--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 
 	<div class=" jumbotron" id="home">
 		<div class="allHead">
-			<h1>Shrey Chandra <small>-----></small></h1>	
+			<h1>Shrey Chandra</h1>	
 			<h2>Think | Create | Learn</h2>
 			<h3>^The Motto</h3>
 		</div>
