--- a/home.html
+++ b/home.html
@@ -3,12 +3,9 @@
 <head>
 <title>Welcome</title>
 
-
-<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-
-
+<link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
+<!-- <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:700" rel="stylesheet"> -->
+<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
 
 
 <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css" integrity="sha384-Wrgq82RsEean5tP3NK3zWAemiNEXofJsTwTyHmNb/iL3dP/sZJ4+7sOld1uqYJtE" crossorigin="anonymous">
@@ -22,7 +19,7 @@
 
 </head>
 
-<body style="font-family: 'lobster' ;color:white ">
+<body style="font-family: 'Josefin Slab', serif; color:white">
 
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -65,11 +62,13 @@
 	<section id="about"  style="height=20px;">
 
 		<div class="center">
-			<h3 class="hey" align="center">About me</h3>
+			<h3 class="hey SecHead" align="center">About me</h3>
 
-			<p>I am a 22 year old guy with a passion for designing.</p>
-			<p>Also a graduate from Jaypee University of Engineering and technology.</p>
-			<p>I let my creative side do much of the talking.</p><p>A learner.</p>
+			<p>I am a 22 year old guy with a passion for designing/development.</p>
+			<p>I like to build sites , Web Apps and also i am a bit picky when it comes to set of colors.</p>
+			<p>I'm a Computer Science graduate from Jaypee University of Engineering and technology.</p>
+			<p>As of current I prefer to code in Ruby(Rails) and i try to combine my Frontend skills with it.</p>
+			<p>I let my creative side do much of the talking.</p><p>Always happy to learn.</p>
 				<!-- <i class="fa fa-chevron-down down-arrow " ></i> -->
 		</div>
 
@@ -77,7 +76,7 @@
 
 	<section id="projects">
 		<div class="container">
-			<h3 class="hey">Projects</h3>
+			<h3 class="hey SecHead">Projects</h3>
 			<div class="row">
 				<div class="col-sm-6">
 					<h2>Notifuzz</h2>
@@ -85,17 +84,17 @@
 				</div>
 				<div class="col-sm-6">
 					<h2>This Site</h2>
-					<p>Yes,this site is to showcase my web dev skills.<br>It uses Bootstrap ,HTML5,CSS3,Jquery.<br>Also i like to design ,so go ahead check it out</p>
+					<p>Yes,this site is to showcase my web dev skills.<br>Its a simple mixture of Bootstrap ,HTML5,CSS3 and a lil bit of Jquery.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>Blah Blah</h2>
-					<p>blah blah with a varied functionality<br>Some really cool stuff here</p>
+					<h2>Dev Box</h2>
+					<p>A Saas project made on Ruby (Rails)<br>Its a community where developers meet <br>Entrepreneurs and Investors.</p>
 				</div>
 				<div class="col-sm-6">
-					<h2>Yolo</h2>
-					<p>You live only once<br>Some High tech programming name ,<br>hard to understand to a non IT guy</p>
+					<h2>SimpleTodo</h2>
+					<p>A simple Web App designed for<br>users manage a there daily tasks.</p>
 				</div>
 			</div>
 
@@ -104,7 +103,7 @@
 
 	<section id="contacts">
 		<div class="container">
-			<h3 class="hey">Get in touch Via</h3>
+			<h3 class="hey SecHead">Get in touch Via</h3>
 			<div class="row">
 			<div class="col-sm-3">
 				<a href="https://github.com/ShreyChandra" target="_blank">
