--- a/home.html
+++ b/home.html
@@ -90,11 +90,11 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<h2>Dev Box</h2>
-					<p>A Saas project made on Ruby (Rails)<br>Its a community where developers meet <br>Entrepreneurs and Investors.</p>
+					<p>A Saas project made on Ruby(Rails).<br>Its a community where developers meet <br>Entrepreneurs and Investors.</p>
 				</div>
 				<div class="col-sm-6">
 					<h2>SimpleTodo</h2>
-					<p>A simple Web App designed for<br>users manage a there daily tasks.</p>
+					<p>A simple Web App on Rails designed for<br>users that lets them manage their daily tasks.</p>
 				</div>
 			</div>
 
