--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Hi.There.</title>
 	
 	<link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
